checkout page completed

--- a/checkout.html
+++ b/checkout.html
@@ -339,12 +339,124 @@
         </ul>
     </section>
     <section class="checkout">
-        <details class="checkout__option checkout__option_1"></details>
-        <details class="checkout__option checkout__option_2"></details>
-        <details class="checkout__option checkout__option_3"></details>
-        <details class="checkout__option checkout__option_4"></details>
-        <details class="checkout__option checkout__option_5"></details>
-        <details class="checkout__option checkout__option_6"></details>
+        <details open class="checkout__option checkout__option_1">
+            <summary class="checkout__option-name">01. Shipping Adress</summary>           
+            <div class="checkout__forms-box">
+                <form action="submit" class="checkout__registration">
+                    <div>
+                        <h4 class="checkout__form-title">Check as a guest or register</h4>
+                        <p class="checkout__form-description">Register with us for future convenience</p>
+                    </div>
+                    <div>
+                        <div class="checkout__form-radio">
+                        <input type="radio" name="rb" id="rb1">
+                        <label class="checkout__form-radio-label" for="rb1">checkout as guest</label>
+                    </div>
+                        <div class="checkout__form-radio">
+                            <input type="radio" name="rb" id="rb2">
+                            <label class="checkout__form-radio-label" for="rb2">register</label>
+                        </div>
+                    </div>
+                    <div>
+                        <h4 class="checkout__form-title">register and save time!</h4>
+                        <p class="checkout__form-description">Register with us for future convenience</p>
+                    </div>
+                    <div>
+                        <p class="checkout__form-description checkout__form-description-features">Fast and easy checkout</p>
+                        <p class="checkout__form-description checkout__form-description-features">Easy access to your order history and status</p>
+                    </div>
+                    <button class="checkout__button" type="submit">CONTINUE</button>
+                </form>
+                <form action="submit" class="checkout__login">
+                    <h4 class="checkout__form-title">Already registed?</h4>
+                    <p class="checkout__form-description">Please log in below</p>
+                    <h4 class="checkout__form-title checkout__form-title-required">EMAIL ADDRESS</h4>
+                    <input class="checkout__form-input" type="email" name="" id="" required>
+                    <h4 class="checkout__form-title checkout__form-title-required">PASSWORD</h4>
+                    <input class="checkout__form-input" type="password" name="" id="" required>
+                    <h4 class="checkout__form-title checkout__form-title_red">* Required Fileds</h4>
+                    <div>
+                        <button class="checkout__button" type="submit">LOG IN</button>
+                        <a href="#" class="checkout__reminder">Forgot Password?</a> 
+                    </div>
+                </form>
+            </div>
+        </details>
+        <details class="checkout__option checkout__option_2">
+            <summary class="checkout__option-name">02. BILLING INFORMATION</summary>
+            <p class="checkout__option-description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quidem quasi sit sequi. Molestiae excepturi voluptatum exercitationem aperiam alias, voluptatibus enim sequi quos fuga at assumenda, saepe, repellendus impedit atque?
+            Quibusdam voluptates quo rerum modi debitis autem praesentium voluptatibus deserunt commodi, laudantium mollitia minima nihil ullam facere voluptate sunt voluptas quasi cum id dicta! Rerum dolores qui maxime labore voluptatibus.
+            Debitis temporibus unde totam obcaecati nemo sed quaerat est, quia architecto labore modi cum quae voluptas fugiat suscipit enim accusantium et nam laudantium nihil beatae aperiam hic molestias. Laudantium, quaerat.
+            Necessitatibus voluptatibus officiis aperiam eveniet velit sunt tenetur unde modi excepturi omnis totam, inventore possimus dolores ipsa. Molestias consequuntur nemo amet, odit esse quis asperiores ipsam inventore dolore nesciunt fugit.
+            Ipsa mollitia obcaecati sapiente illum quisquam repellendus quam commodi possimus cumque cupiditate autem voluptatem officiis aperiam iste perspiciatis, adipisci libero rem recusandae praesentium? Corrupti asperiores enim quia amet neque voluptatem.
+            Placeat commodi inventore dicta debitis atque iure vel rerum ducimus, eaque maxime ipsum est, quas eius labore nam nostrum. Nam quisquam excepturi commodi atque repudiandae pariatur eum quaerat ab dolores!
+            Labore cum officia perferendis beatae eligendi veniam, nisi, nulla a facilis officiis incidunt eaque cupiditate odit accusamus distinctio? Blanditiis dolorum error incidunt non nam aut facilis iusto. Veniam, doloribus recusandae!
+            Sed ullam suscipit maxime, itaque facere temporibus odio, voluptatem voluptate molestias hic, eos iste laborum doloribus reiciendis aperiam? Optio aliquam placeat aliquid quas, alias reprehenderit nemo debitis fugit magnam nulla!
+            Non aliquid id officiis dignissimos nesciunt eligendi doloremque ullam, ad perspiciatis fugit, modi repudiandae aut dolore blanditiis omnis eum hic autem consequatur beatae magni pariatur praesentium? Qui sequi delectus itaque.
+            Doloribus, saepe unde. Fuga laborum corporis odit omnis quibusdam quam, praesentium hic officiis illo, voluptas nihil, non voluptatibus provident corrupti sequi iusto libero numquam qui neque quia voluptatum maxime porro.
+            </p>
+        </details>
+        <details class="checkout__option checkout__option_3">
+            <summary class="checkout__option-name">03. SHIPPING INFORMATION</summary>
+            <p class="checkout__option-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quidem quasi sit sequi. Molestiae excepturi voluptatum exercitationem aperiam alias, voluptatibus enim sequi quos fuga at assumenda, saepe, repellendus impedit atque?
+                Quibusdam voluptates quo rerum modi debitis autem praesentium voluptatibus deserunt commodi, laudantium mollitia minima nihil ullam facere voluptate sunt voluptas quasi cum id dicta! Rerum dolores qui maxime labore voluptatibus.
+                Debitis temporibus unde totam obcaecati nemo sed quaerat est, quia architecto labore modi cum quae voluptas fugiat suscipit enim accusantium et nam laudantium nihil beatae aperiam hic molestias. Laudantium, quaerat.
+                Necessitatibus voluptatibus officiis aperiam eveniet velit sunt tenetur unde modi excepturi omnis totam, inventore possimus dolores ipsa. Molestias consequuntur nemo amet, odit esse quis asperiores ipsam inventore dolore nesciunt fugit.
+                Ipsa mollitia obcaecati sapiente illum quisquam repellendus quam commodi possimus cumque cupiditate autem voluptatem officiis aperiam iste perspiciatis, adipisci libero rem recusandae praesentium? Corrupti asperiores enim quia amet neque voluptatem.
+                Placeat commodi inventore dicta debitis atque iure vel rerum ducimus, eaque maxime ipsum est, quas eius labore nam nostrum. Nam quisquam excepturi commodi atque repudiandae pariatur eum quaerat ab dolores!
+                Labore cum officia perferendis beatae eligendi veniam, nisi, nulla a facilis officiis incidunt eaque cupiditate odit accusamus distinctio? Blanditiis dolorum error incidunt non nam aut facilis iusto. Veniam, doloribus recusandae!
+                Sed ullam suscipit maxime, itaque facere temporibus odio, voluptatem voluptate molestias hic, eos iste laborum doloribus reiciendis aperiam? Optio aliquam placeat aliquid quas, alias reprehenderit nemo debitis fugit magnam nulla!
+                Non aliquid id officiis dignissimos nesciunt eligendi doloremque ullam, ad perspiciatis fugit, modi repudiandae aut dolore blanditiis omnis eum hic autem consequatur beatae magni pariatur praesentium? Qui sequi delectus itaque.
+                Doloribus, saepe unde. Fuga laborum corporis odit omnis quibusdam quam, praesentium hic officiis illo, voluptas nihil, non voluptatibus provident corrupti sequi iusto libero numquam qui neque quia voluptatum maxime porro.
+            </p>
+        </details>
+        <details class="checkout__option checkout__option_4">
+            <summary class="checkout__option-name">04. SHIPPING METHOD</summary>
+            <p class="checkout__option-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quidem quasi sit sequi. Molestiae excepturi voluptatum exercitationem aperiam alias, voluptatibus enim sequi quos fuga at assumenda, saepe, repellendus impedit atque?
+                Quibusdam voluptates quo rerum modi debitis autem praesentium voluptatibus deserunt commodi, laudantium mollitia minima nihil ullam facere voluptate sunt voluptas quasi cum id dicta! Rerum dolores qui maxime labore voluptatibus.
+                Debitis temporibus unde totam obcaecati nemo sed quaerat est, quia architecto labore modi cum quae voluptas fugiat suscipit enim accusantium et nam laudantium nihil beatae aperiam hic molestias. Laudantium, quaerat.
+                Necessitatibus voluptatibus officiis aperiam eveniet velit sunt tenetur unde modi excepturi omnis totam, inventore possimus dolores ipsa. Molestias consequuntur nemo amet, odit esse quis asperiores ipsam inventore dolore nesciunt fugit.
+                Ipsa mollitia obcaecati sapiente illum quisquam repellendus quam commodi possimus cumque cupiditate autem voluptatem officiis aperiam iste perspiciatis, adipisci libero rem recusandae praesentium? Corrupti asperiores enim quia amet neque voluptatem.
+                Placeat commodi inventore dicta debitis atque iure vel rerum ducimus, eaque maxime ipsum est, quas eius labore nam nostrum. Nam quisquam excepturi commodi atque repudiandae pariatur eum quaerat ab dolores!
+                Labore cum officia perferendis beatae eligendi veniam, nisi, nulla a facilis officiis incidunt eaque cupiditate odit accusamus distinctio? Blanditiis dolorum error incidunt non nam aut facilis iusto. Veniam, doloribus recusandae!
+                Sed ullam suscipit maxime, itaque facere temporibus odio, voluptatem voluptate molestias hic, eos iste laborum doloribus reiciendis aperiam? Optio aliquam placeat aliquid quas, alias reprehenderit nemo debitis fugit magnam nulla!
+                Non aliquid id officiis dignissimos nesciunt eligendi doloremque ullam, ad perspiciatis fugit, modi repudiandae aut dolore blanditiis omnis eum hic autem consequatur beatae magni pariatur praesentium? Qui sequi delectus itaque.
+                Doloribus, saepe unde. Fuga laborum corporis odit omnis quibusdam quam, praesentium hic officiis illo, voluptas nihil, non voluptatibus provident corrupti sequi iusto libero numquam qui neque quia voluptatum maxime porro.
+            </p>
+            </details>
+        <details class="checkout__option checkout__option_5">
+            <summary class="checkout__option-name">05. PAYMENT METHOD</summary>
+            <p class="checkout__option-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quidem quasi sit sequi. Molestiae excepturi voluptatum exercitationem aperiam alias, voluptatibus enim sequi quos fuga at assumenda, saepe, repellendus impedit atque?
+                Quibusdam voluptates quo rerum modi debitis autem praesentium voluptatibus deserunt commodi, laudantium mollitia minima nihil ullam facere voluptate sunt voluptas quasi cum id dicta! Rerum dolores qui maxime labore voluptatibus.
+                Debitis temporibus unde totam obcaecati nemo sed quaerat est, quia architecto labore modi cum quae voluptas fugiat suscipit enim accusantium et nam laudantium nihil beatae aperiam hic molestias. Laudantium, quaerat.
+                Necessitatibus voluptatibus officiis aperiam eveniet velit sunt tenetur unde modi excepturi omnis totam, inventore possimus dolores ipsa. Molestias consequuntur nemo amet, odit esse quis asperiores ipsam inventore dolore nesciunt fugit.
+                Ipsa mollitia obcaecati sapiente illum quisquam repellendus quam commodi possimus cumque cupiditate autem voluptatem officiis aperiam iste perspiciatis, adipisci libero rem recusandae praesentium? Corrupti asperiores enim quia amet neque voluptatem.
+                Placeat commodi inventore dicta debitis atque iure vel rerum ducimus, eaque maxime ipsum est, quas eius labore nam nostrum. Nam quisquam excepturi commodi atque repudiandae pariatur eum quaerat ab dolores!
+                Labore cum officia perferendis beatae eligendi veniam, nisi, nulla a facilis officiis incidunt eaque cupiditate odit accusamus distinctio? Blanditiis dolorum error incidunt non nam aut facilis iusto. Veniam, doloribus recusandae!
+                Sed ullam suscipit maxime, itaque facere temporibus odio, voluptatem voluptate molestias hic, eos iste laborum doloribus reiciendis aperiam? Optio aliquam placeat aliquid quas, alias reprehenderit nemo debitis fugit magnam nulla!
+                Non aliquid id officiis dignissimos nesciunt eligendi doloremque ullam, ad perspiciatis fugit, modi repudiandae aut dolore blanditiis omnis eum hic autem consequatur beatae magni pariatur praesentium? Qui sequi delectus itaque.
+                Doloribus, saepe unde. Fuga laborum corporis odit omnis quibusdam quam, praesentium hic officiis illo, voluptas nihil, non voluptatibus provident corrupti sequi iusto libero numquam qui neque quia voluptatum maxime porro.
+            </p>
+        </details>
+        <details class="checkout__option checkout__option_6">
+            <summary class="checkout__option-name">06. ORDER REVIEW</summary>
+            <p class="checkout__option-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quidem quasi sit sequi. Molestiae excepturi voluptatum exercitationem aperiam alias, voluptatibus enim sequi quos fuga at assumenda, saepe, repellendus impedit atque?
+                Quibusdam voluptates quo rerum modi debitis autem praesentium voluptatibus deserunt commodi, laudantium mollitia minima nihil ullam facere voluptate sunt voluptas quasi cum id dicta! Rerum dolores qui maxime labore voluptatibus.
+                Debitis temporibus unde totam obcaecati nemo sed quaerat est, quia architecto labore modi cum quae voluptas fugiat suscipit enim accusantium et nam laudantium nihil beatae aperiam hic molestias. Laudantium, quaerat.
+                Necessitatibus voluptatibus officiis aperiam eveniet velit sunt tenetur unde modi excepturi omnis totam, inventore possimus dolores ipsa. Molestias consequuntur nemo amet, odit esse quis asperiores ipsam inventore dolore nesciunt fugit.
+                Ipsa mollitia obcaecati sapiente illum quisquam repellendus quam commodi possimus cumque cupiditate autem voluptatem officiis aperiam iste perspiciatis, adipisci libero rem recusandae praesentium? Corrupti asperiores enim quia amet neque voluptatem.
+                Placeat commodi inventore dicta debitis atque iure vel rerum ducimus, eaque maxime ipsum est, quas eius labore nam nostrum. Nam quisquam excepturi commodi atque repudiandae pariatur eum quaerat ab dolores!
+                Labore cum officia perferendis beatae eligendi veniam, nisi, nulla a facilis officiis incidunt eaque cupiditate odit accusamus distinctio? Blanditiis dolorum error incidunt non nam aut facilis iusto. Veniam, doloribus recusandae!
+                Sed ullam suscipit maxime, itaque facere temporibus odio, voluptatem voluptate molestias hic, eos iste laborum doloribus reiciendis aperiam? Optio aliquam placeat aliquid quas, alias reprehenderit nemo debitis fugit magnam nulla!
+                Non aliquid id officiis dignissimos nesciunt eligendi doloremque ullam, ad perspiciatis fugit, modi repudiandae aut dolore blanditiis omnis eum hic autem consequatur beatae magni pariatur praesentium? Qui sequi delectus itaque.
+                Doloribus, saepe unde. Fuga laborum corporis odit omnis quibusdam quam, praesentium hic officiis illo, voluptas nihil, non voluptatibus provident corrupti sequi iusto libero numquam qui neque quia voluptatum maxime porro.
+            </p>
+        </details>
     </section>
     <div class="subscriber">
         <div class="subscriber__teaser">
