catalogue page compiled

--- a/product.html
+++ b/product.html
@@ -356,26 +356,179 @@
                 <a href="#" class="catalogue-menu__item">Tanks</a>
                 <a href="#" class="catalogue-menu__item">Accessories</a>
             </details>
+            <details class="catalogue-menu__section">
+                <summary class="catalogue-menu__title">BRAND</summary>
+                <a href="#" class="catalogue-menu__item">Bags</a>
+                <a href="#" class="catalogue-menu__item">Denim</a>
+                <a href="#" class="catalogue-menu__item">Hoodies & Sweatshirts</a>
+                <a href="#" class="catalogue-menu__item">Jackets & Coats</a>
+                <a href="#" class="catalogue-menu__item">Pants</a>
+                <a href="#" class="catalogue-menu__item">Polos</a>
+                <a href="#" class="catalogue-menu__item">Shirts</a>
+                <a href="#" class="catalogue-menu__item">Shoes</a>
+                <a href="#" class="catalogue-menu__item">Shorts</a>
+                <a href="#" class="catalogue-menu__item">Sweaters & Knits</a>
+                <a href="#" class="catalogue-menu__item">T-Shirts</a>
+                <a href="#" class="catalogue-menu__item">Tanks</a>
+                <a href="#" class="catalogue-menu__item">Accessories</a>
+            </details>
+            <details class="catalogue-menu__section">
+                <summary class="catalogue-menu__title">DESIGNER</summary>
+                <a href="#" class="catalogue-menu__item">Bags</a>
+                <a href="#" class="catalogue-menu__item">Denim</a>
+                <a href="#" class="catalogue-menu__item">Hoodies & Sweatshirts</a>
+                <a href="#" class="catalogue-menu__item">Jackets & Coats</a>
+                <a href="#" class="catalogue-menu__item">Pants</a>
+                <a href="#" class="catalogue-menu__item">Polos</a>
+                <a href="#" class="catalogue-menu__item">Shirts</a>
+                <a href="#" class="catalogue-menu__item">Shoes</a>
+                <a href="#" class="catalogue-menu__item">Shorts</a>
+                <a href="#" class="catalogue-menu__item">Sweaters & Knits</a>
+                <a href="#" class="catalogue-menu__item">T-Shirts</a>
+                <a href="#" class="catalogue-menu__item">Tanks</a>
+                <a href="#" class="catalogue-menu__item">Accessories</a>
+            </details>
         </nav>
         <section class="catalogue-box">
-            <section class="catalogue-filters">
+            <!-- <section class="catalogue-filters"> -->
                 <nav class="catalogue-filters__trends">
-
+                    <h4 class="catalogue-filters__title">Trending now</h4>
+                    <p class="catalogue-filters__trends-options">Bohemian    |    Floral    |    Lace 
+                        Floral    |    Lace    |    Bohemian</p>
                 </nav>
                 <nav class="catalogue-filters__sizes">
+                    <h4 class="catalogue-filters__title">Size</h4>
+                    <p class="catalogue-filters__trends-options">Bohemian    |    Floral    |    Lace 
+                        Floral    |    Lace    |    Bohemian</p>
 
                 </nav>
                 <div class="catalogue-filters__price">
+                    <h4 class="catalogue-filters__title">pRICE</h4>
+                    <p class="catalogue-filters__trends-options">Bohemian    |    Floral    |    Lace 
+                        Floral    |    Lace    |    Bohemian</p>
 
                 </div>
-            </section>
+            <!-- </section> -->
             <div class="catalogue-sorting">
 
             </div>
-            <div class="catalogue-products">
-
-            </div>
-
+            <article class="products__product">
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo_cat" src="./img/cat_product_1.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
+                </a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
+            </article>
+            <article class="products__product">
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo_cat" src="./img/cat_product_2.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
+                </a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
+            </article>
+            <article class="products__product">
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo_cat" src="./img/cat_product_3.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
+                </a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
+            </article>
+            <article class="products__product">
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo_cat" src="./img/cat_product_4.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
+                </a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
+            </article>
+            <article class="products__product">
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo_cat" src="./img/cat_product_5.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
+                </a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
+            </article>
+            <article class="products__product">
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo_cat" src="./img/cat_product_6.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
+                </a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
+            </article>
+            <article class="products__product">
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo_cat" src="./img/cat_product_7.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
+                </a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
+            </article>
+            <article class="products__product">
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo_cat" src="./img/cat_product_8.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
+                </a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
+            </article>
+            <article class="products__product">
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo_cat" src="./img/cat_product_9.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
+                </a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
+            </article>
         </section>
     </section>
     <div class="feature__boxes feature__boxes_cat">
