--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                 </a>
                 <div class="add-box">
                     <a href="shopping_cart.html" class="add">
-                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
                         <p class="add-txt">Add to Cart</p>
                     </a>
                 </div>
@@ -422,7 +422,7 @@
                 </a>
                 <div class="add-box">
                     <a href="shopping_cart.html" class="add">
-                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
                         <p class="add-txt">Add to Cart</p>
                     </a>
                 </div>
@@ -435,7 +435,7 @@
                 </a>
                 <div class="add-box">
                     <a href="shopping_cart.html" class="add">
-                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
                         <p class="add-txt">Add to Cart</p>
                     </a>
                 </div>
@@ -448,7 +448,7 @@
                 </a>
                 <div class="add-box">
                     <a href="shopping_cart.html" class="add">
-                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
                         <p class="add-txt">Add to Cart</p>
                     </a>
                 </div>
@@ -461,7 +461,7 @@
                 </a>
                 <div class="add-box">
                     <a href="shopping_cart.html" class="add">
-                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
                         <p class="add-txt">Add to Cart</p>
                     </a>
                 </div>
@@ -474,7 +474,7 @@
                 </a>
                 <div class="add-box">
                     <a href="shopping_cart.html" class="add">
-                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
                         <p class="add-txt">Add to Cart</p>
                     </a>
                 </div>
@@ -487,7 +487,7 @@
                 </a>
                 <div class="add-box">
                     <a href="shopping_cart.html" class="add">
-                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
                         <p class="add-txt">Add to Cart</p>
                     </a>
                 </div>
@@ -500,7 +500,7 @@
                 </a>
                 <div class="add-box">
                     <a href="shopping_cart.html" class="add">
-                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <img src="img/cart_add.png" alt="cart" class="cart-image">
                         <p class="add-txt">Add to Cart</p>
                     </a>
                 </div>
