minor changes in filters on Catalogue page made

--- a/product.html
+++ b/product.html
@@ -393,12 +393,12 @@
             <nav class="catalogue-filters__trends">
                 <h4 class="catalogue-filters__title">Trending now</h4>
                 <div class="catalogue-filters__trends-box">
-                    <p class="catalogue-filters__trends-options">Bohemian</p>
-                    <p class="catalogue-filters__trends-options">Floral</p>
-                    <p class="catalogue-filters__trends-options">Lace</p>
-                    <p class="catalogue-filters__trends-options">Floral</p>
-                    <p class="catalogue-filters__trends-options">Lace</p>
-                    <p class="catalogue-filters__trends-options">Bohemian</p>
+                    <a href="#" class="catalogue-filters__trends-options">Bohemian</a>
+                    <a href="#" class="catalogue-filters__trends-options">Lace</a>
+                    <a href="#" class="catalogue-filters__trends-options">Floral</a>
+                    <a href="#" class="catalogue-filters__trends-options">Floral</a>
+                    <a href="#" class="catalogue-filters__trends-options">Lace</a>
+                    <a href="#" class="catalogue-filters__trends-options">Bohemian</a>
                 </div>
             </nav>
             <nav class="catalogue-filters__sizing">
@@ -435,7 +435,7 @@
                 <form class="catalogue-sorting__form">
                     <label class="catalogue-sorting__text" for="catalogue-sorting">Show</label>
                     <select class="catalogue-sorting__text-selector" name="" id="catalogue-sorting">
-                        <option value="9">9</option>
+                        <option value="9">09</option>
                         <option value="15">15</option>
                         <option value="21">21</option>
                     </select>
